--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ dependencies = [
     "bokeh>=3.5.2",
     "jupyter-bokeh>=4.0.5",
     "seaborn>=0.13.2",
+    "names-generator>=0.2.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
