--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ dependencies = [
     "scipy>=1.14.1",
     "xarray-spatial==0.4.0",
     "dask>=2024.11.0, <=2024.11.2",
-    "distributed>=2024.12.0",
+    "distributed>=2024.11.0, <=2024.11.2",
     "geocube>=0.7.0",
     # Visualization
     "cartopy>=0.24.1",
