Move metrics to callback and add testing script
This is a breaking change to previously training-runs, since naming etc. is changed now.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,7 @@ nav:
       - Config: dev/config.md
       - Datacubes: dev/auxiliary.md
       - Logging: dev/logging.md
+      - Training: dev/training.md
 
 theme:
   name: material
