--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     "odc-geo>=0.4.8",
     "odc-stac[botocore]>=0.3.10",
     "toml>=0.10.2",
-    "zarr[jupyter]>=2.18.3",
+    "zarr[jupyter]>=2.18.3, <3",
     # Training and Inference
     "segmentation-models-pytorch>=0.4.0",
     "lightning>=2.4.0",
