--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ dependencies = [
     "jupyter-bokeh>=4.0.5",
     "seaborn>=0.13.2",
     "names-generator>=0.2.0",
+    "psycopg2>=2.9.10",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
