--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,10 @@ dependencies = [
     "geopandas>=1.0.1",
     "shapely>=2.0.0",
     "earthengine-api>=1.1.5",
-    "xee>=0.0.19",
-    "pystac>=1.11.0",
+    "xee>=0.0.20",
+    "pystac>=1.12.1",
     "xpystac>=0.1.3",
+    "pystac-client>=0.8.6",
     "odc-geo>=0.4.8",
     "odc-stac[botocore]>=0.3.10",
     "toml>=0.10.2",
@@ -53,6 +54,7 @@ dependencies = [
     "seaborn>=0.13.2",
     "names-generator>=0.2.0",
     "psycopg2>=2.9.10",
+    "boto3>=1.37.7",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
