--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,6 @@ dependencies = [
     "names-generator>=0.2.0",
     # IO
     "boto3>=1.37.7",
-    "psycopg2>=2.9.10",
     "h5netcdf>=1.3.0",
     "rasterio>=1.4.0",
     "rioxarray>=0.17.0",
@@ -26,11 +25,8 @@ dependencies = [
     "odc-stac[botocore]>=0.3.10",
     "toml>=0.10.2",
     "zarr[jupyter]>=2.18.3, <3",
-    # Training and Inference
-    "albumentations>=1.4.21",
-    "wandb>=0.18.7",
-    "optuna>=4.1.0",
     # Processing
+    "albumentations>=1.4.21",
     "scikit-image>=0.20",
     "scipy>=1.14.1",
     "xarray-spatial>=0.4.0",
@@ -76,20 +72,16 @@ authors = [
 cpu = [
     "torch>=2.2.0",
     "torchvision>=0.17.0",
-    "lightning>=2.4.0",
     "segmentation-models-pytorch>=0.4.0",
     "lovely-tensors>=0.1.17",
     "timm>=1.0.13",
-    "torchmetrics>=1.6.0",
 ]
 cuda118 = [
     "torch>=2.2.0",
     "torchvision>=0.17.0",
-    "lightning>=2.4.0",
     "segmentation-models-pytorch>=0.4.0",
     "lovely-tensors>=0.1.17",
     "timm>=1.0.13",
-    "torchmetrics>=1.6.0",
     # CUDA-only
     "cucim-cu11>=24.8",
     "cupy-cuda11x>=13.3.0",
@@ -100,11 +92,9 @@ cuda118 = [
 cuda121 = [
     "torch>=2.2.0",
     "torchvision>=0.17.0",
-    "lightning>=2.4.0",
     "segmentation-models-pytorch>=0.4.0",
     "lovely-tensors>=0.1.17",
     "timm>=1.0.13",
-    "torchmetrics>=1.6.0",
     # CUDA-only
     "cucim-cu12>=24.8",
     "cupy-cuda12x>=13.3.0",
@@ -115,11 +105,9 @@ cuda121 = [
 cuda124 = [
     "torch>=2.2.0",
     "torchvision>=0.17.0",
-    "lightning>=2.4.0",
     "segmentation-models-pytorch>=0.4.0",
     "lovely-tensors>=0.1.17",
     "timm>=1.0.13",
-    "torchmetrics>=1.6.0",
     # CUDA-only
     "cucim-cu12>=24.8",
     "cupy-cuda12x>=13.3.0",
@@ -130,17 +118,22 @@ cuda124 = [
 cuda126 = [
     "torch>=2.2.0",
     "torchvision>=0.17.0",
-    "lightning>=2.4.0",
     "segmentation-models-pytorch>=0.4.0",
     "lovely-tensors>=0.1.17",
     "timm>=1.0.13",
-    "torchmetrics>=1.6.0",
     # CUDA-only
     "cucim-cu12>=24.8",
     "cupy-cuda12x>=13.3.0",
     "cupy-xarray",
     "cuda-python>=12.6.2.post1",
     "pynvml==11.4.1",
+]
+training = [
+    "lightning>=2.4.0",
+    "psycopg2>=2.9.10",
+    "torchmetrics>=1.6.0",
+    "wandb>=0.18.7",
+    "optuna>=4.1.0",
 ]
 
 [project.scripts]
