--- a/.github/workflows/update_version.yml
+++ b/.github/workflows/update_version.yml
@@ -64,12 +64,10 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v5
         with:
-          version: "0.5.24"
+          version: "0.6.7"
 
       - name: "Set up Python"
-        uses: actions/setup-python@v5
-        with:
-          python-version-file: "pyproject.toml"
+        uses: actions/setup-python@v5 # Uses python version from .python-version -> important for uv
 
       - name: Build package
         run: uv build
@@ -106,9 +104,7 @@ jobs:
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
 
       - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version-file: "pyproject.toml"
+        uses: actions/setup-python@v5  # Uses python version from .python-version
 
       - name: Get cache id
         run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
@@ -123,7 +119,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install "mkdocs-material[imaging]>=9.5.38" "mkdocstrings[python]>=0.26.1" "mike>=2.1.3" "mkdocs-git-revision-date-localized-plugin>=1.2.9" "mkdocs-git-committers-plugin-2>=2.3.0"
+          pip install "mkdocs-material[imaging]>=9.5.38" "mkdocstrings[python]>=0.26.1" "mike>=2.1.3" "mkdocs-git-revision-date-localized-plugin>=1.2.9" "mkdocs-git-committers-plugin-2>=2.3.0" "mkdocs-glightbox>=0.4.0"
 
       - name: Publish documentation
         run: mike deploy --push --update-aliases ${{ needs.update-version.outputs.VERSION }} latest
