Redo the intro documentations

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,16 +10,17 @@ edit_uri: edit/main/docs/
 
 nav:
   - Home: index.md
-  - Getting Started: getting_started.md
-  - Components:
-      - Intro to components: components/intro.md
+  - Overview: overview.md
+  - Guides:
+      - Installation: guides/installation.md
+      - DARTS Components: guides/components.md
+      - Config Files: dev/config.md
+      - Logging: dev/logging.md
+      - Training: dev/training.md
   - Dev:
       - Contribute: contribute.md
       - Pipeline steps APIs: dev/arch.md
       - Datacubes: dev/auxiliary.md
-      - Config Files: dev/config.md
-      - Logging: dev/logging.md
-      - Training: dev/training.md
   - Reference:
       - DARTS: ref/darts.md
       - Acquisition: ref/acquisition.md
