--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,24 +14,14 @@ nav:
   - Guides:
       - Installation: guides/installation.md
       - DARTS Components: guides/components.md
-      - Config Files: dev/config.md
-      - Logging: dev/logging.md
-      - Training: dev/training.md
+      - Config Files: guides/config.md
+      - Logging: guides/logging.md
+      - Training: guides/training.md
   - Dev:
       - Contribute: contribute.md
       - Pipeline steps APIs: dev/arch.md
       - Datacubes: dev/auxiliary.md
-  - Reference:
-      - DARTS: ref/darts.md
-      - Acquisition: ref/acquisition.md
-      - Preprocessing: ref/preprocessing.md
-      - Ensemble: ref/ensemble.md
-      - Export: ref/export.md
-      - Segmentation: ref/segmentation.md
-      - Superresolution: ref/superresolution.md
-      - Postprocessing: ref/postprocessing.md
-      - Utility: ref/utils.md
-      - All: ref.md
+      - Docs: dev/docs.md
 
 theme:
   name: material
@@ -90,6 +80,8 @@ theme:
     - content.code.annotate
 plugins:
   - glightbox
+  - api-autonav:
+      modules: ['darts/src/darts']
   - mkdocstrings:
       handlers:
         python:
@@ -114,6 +106,15 @@ plugins:
             group_by_category: true
             show_category_heading: false
             show_if_no_docstring: true
+            docstring_section_style: list
+            annotations_path: full
+            show_signature: true
+            separate_signature: true
+            show_signature_annotations: true
+            show_overloads: true
+            # signature_crossrefs: true
+            unwrap_annotated: true
+            merge_init_into_class: true
   - privacy:
       enabled: !ENV [CI, false]
   - search:
@@ -165,11 +166,15 @@ markdown_extensions:
       pygments_lang_class: true
   - pymdownx.tasklist:
       custom_checkbox: true
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
   - pymdownx.inlinehilite
   - pymdownx.snippets
   - pymdownx.superfences
   - pymdownx.details
   - attr_list
+  - md_in_html
   - admonition
   - tables
   - def_list
