--- a/.github/workflows/update_version.yml
+++ b/.github/workflows/update_version.yml
@@ -64,10 +64,10 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v5
         with:
-          version: "0.6.7"
+          version: '0.6.7'
 
-      - name: "Set up Python"
-        uses: actions/setup-python@v5 # Uses python version from .python-version -> important for uv
+      - name: Set up Python
+        run: uv python install
 
       - name: Build package
         run: uv build
@@ -103,8 +103,13 @@ jobs:
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
 
-      - name: Setup Python
-        uses: actions/setup-python@v5  # Uses python version from .python-version
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          version: '0.6.7'
+
+      - name: Set up Python
+        run: uv python install
 
       - name: Get cache id
         run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
@@ -118,8 +123,10 @@ jobs:
             mkdocs-material
 
       - name: Install dependencies
-        run: |
-          pip install "mkdocs-material[imaging]>=9.5.38" "mkdocstrings[python]>=0.26.1" "mike>=2.1.3" "mkdocs-git-revision-date-localized-plugin>=1.2.9" "mkdocs-git-committers-plugin-2>=2.3.0" "mkdocs-glightbox>=0.4.0"
+        run: uv sync --extra training --extra cpu --group docs
+
+      - name: Install dependencies
+        run: uv sync --extra training --extra cpu --group docs
 
       - name: Publish documentation
-        run: mike deploy --push --update-aliases ${{ needs.update-version.outputs.VERSION }} latest
+        run: uv run mike deploy --push --update-aliases ${{ needs.update-version.outputs.VERSION }} latest
