--- a/pyproject.toml
+++ b/pyproject.toml
@@ -143,7 +143,8 @@ cuda126 = [
 ]
 training = [
     "lightning>=2.4.0",
-    "psycopg2>=2.9.10",
+    # "psycopg2>=2.9.10",
+    "psycopg[binary]",
     "torchmetrics>=1.6.0",
     "wandb>=0.18.7",
     "optuna>=4.1.0",
