--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,15 +27,11 @@ nav:
       - reference/index.md
       - <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>darts:
           - reference/darts/index.md
-          - <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>automated_pipeline:
-              - reference/darts/automated_pipeline/index.md
-              - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>run_native_sentinel2_pipeline_from_aoi: reference/darts/automated_pipeline/run_native_sentinel2_pipeline_from_aoi.md
-          - <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>legacy_pipeline:
-              - reference/darts/legacy_pipeline/index.md
-              - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>run_native_planet_pipeline_fast: reference/darts/legacy_pipeline/run_native_planet_pipeline_fast.md
-              - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>run_native_sentinel2_pipeline_fast: reference/darts/legacy_pipeline/run_native_sentinel2_pipeline_fast.md
-              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>LegacyNativePlanetPipelineFast: reference/darts/legacy_pipeline/LegacyNativePlanetPipelineFast.md
-              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>LegacyNativeSentinel2PipelineFast: reference/darts/legacy_pipeline/LegacyNativeSentinel2PipelineFast.md
+          - <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>pipelines:
+              - reference/darts/pipelines/index.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>AOISentinel2Pipeline: reference/darts/pipelines/AOISentinel2Pipeline.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>PlanetPipeline: reference/darts/pipelines/PlanetPipeline.md
+              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>Sentinel2Pipeline: reference/darts/pipelines/Sentinel2Pipeline.md
           - <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>legacy_training:
               - reference/darts/legacy_training/index.md
               - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>convert_lightning_checkpoint: reference/darts/legacy_training/convert_lightning_checkpoint.md
@@ -84,21 +80,14 @@ nav:
           - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>load_s2_masks: reference/darts_acquisition/load_s2_masks.md
           - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>load_s2_scene: reference/darts_acquisition/load_s2_scene.md
           - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>load_tcvis: reference/darts_acquisition/load_tcvis.md
+          - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>parse_planet_type: reference/darts_acquisition/parse_planet_type.md
+          - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>parse_s2_tile_id: reference/darts_acquisition/parse_s2_tile_id.md
       - <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>darts_ensemble:
           - reference/darts_ensemble/index.md
           - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>EnsembleV1: reference/darts_ensemble/EnsembleV1.md
       - <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>darts_export:
           - reference/darts_export/index.md
-          - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>export_arcticdem_datamask: reference/darts_export/export_arcticdem_datamask.md
-          - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>export_binarized: reference/darts_export/export_binarized.md
-          - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>export_datamask: reference/darts_export/export_datamask.md
-          - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>export_dem: reference/darts_export/export_dem.md
-          - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>export_extent: reference/darts_export/export_extent.md
-          - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>export_optical: reference/darts_export/export_optical.md
-          - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>export_polygonized: reference/darts_export/export_polygonized.md
-          - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>export_probabilities: reference/darts_export/export_probabilities.md
-          - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>export_tcvis: reference/darts_export/export_tcvis.md
-          - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>export_thumbnail: reference/darts_export/export_thumbnail.md
+          - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>export_tile: reference/darts_export/export_tile.md
       - <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>darts_postprocessing:
           - reference/darts_postprocessing/index.md
           - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>prepare_export: reference/darts_postprocessing/prepare_export.md
@@ -117,10 +106,6 @@ nav:
           - <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>rich:
               - reference/darts_utils/rich/index.md
               - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>RichManagerSingleton: reference/darts_utils/rich/RichManagerSingleton.md
-          - <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>stopuhr:
-              - reference/darts_utils/stopuhr/index.md
-              - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>stopuhr: reference/darts_utils/stopuhr/stopuhr.md
-              - <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>StopUhr: reference/darts_utils/stopuhr/StopUhr.md
 
 theme:
   name: material
