--- a/config.toml.example
+++ b/config.toml.example
@@ -7,16 +7,11 @@ sentinel2-dir = "data/input/sentinel2"
 orthotiles-dir = "data/input/planet/PSOrthoTile"
 scenes-dir = "data/input/planet/PSScene"
 output-data-dir = "data/output"
-model-dir = "models"
-tcvis-model-name = "RTS_v6_tcvis.pt"
-notcvis-model-name = "RTS_v6_notcvis.pt"
-arcticdem-slope-vrt = "data/input/ArcticDEM/slope.vrt"
-arcticdem-elevation-vrt = "data/input/ArcticDEM/elevation.vrt"
+model-files = ["models/RTS_v6_tcvis.pt", "models/RTS_v6_notcvis.pt"]
 arcticdem-dir = "data/download/arcticdem"
 tcvis-dir = "data/download/tcvis"
 overwrite = false # planet inference only
 image-ids = ['20210724_194944_103c', '20210731_200455_92_2262'] # planet inference only, remove to process all images
-
 
 [darts.preprocess]
 tpi-outer-radius = 100
