--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -88,6 +88,7 @@ nav:
       - <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>darts_export:
           - reference/darts_export/index.md
           - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>export_tile: reference/darts_export/export_tile.md
+          - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>missing_outputs: reference/darts_export/missing_outputs.md
       - <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>darts_postprocessing:
           - reference/darts_postprocessing/index.md
           - <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>prepare_export: reference/darts_postprocessing/prepare_export.md
