--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ dependencies = [
     "scikit-image>=0.20",
     "scipy>=1.14.1",
     "xarray-spatial>=0.4.0",
-    "dask>=2024.11.0",
+    "dask>=2024.11.0,<2025.3.0",
     "distributed>=2024.12.0",
     "geocube>=0.7.0",
     "numpy>=1.26.3, <2",
