Refactor training This is not tested yet! Some features, like machine-parallel training are missing.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ dependencies = [
     "darts-segmentation",
     "darts-superresolution",
     "darts-utils",
+    "filelock>=3.18.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
